# dazzleduck-sql-duckdb

./: .gitignore  BUILDING.md  CMakeLists.txt  Makefile  README.md  description.yml  extension_config.cmake
benchmark/: array_contains_all_benchmark.sql  array_contains_all_benchmark_large.sql  lineitem.py
docker/: Dockerfile.duckdb-base  Dockerfile.extension  build-linux.sh
docs/: CANCELLATION.md
scripts/: build-windows-native.ps1  build-windows.sh  run_all_tests.sh  run_cancel_tests.sh  run_integration_tests.sh  run_split_tests.sh  update_version.sh
src/: dazzle_duck_extension.cpp  dazzleduck_extension.cpp
src/http/: arrow_http_client.cpp  cancel_monitor.cpp  split_info.cpp
src/include/: dazzle_duck_extension.hpp  dazzleduck_extension.hpp
src/include/http/: arrow_http_client.hpp  cancel_monitor.hpp  split_info.hpp
src/include/ipc/: http_stream_factory.hpp  stream_factory.hpp
src/include/ipc/stream_reader/: base_stream_reader.hpp  ipc_buffer_stream_reader.hpp
src/include/optimizer/: aggregation_pushdown.hpp
src/include/scalar_function/: array_contains_all.hpp  bloom_filter.hpp  dd_login.hpp  dd_search.hpp
src/include/table_function/: dd_splits.hpp  read_arrow_dd.hpp
src/ipc/: http_stream_factory.cpp  stream_factory.cpp
src/ipc/stream_reader/: base_stream_reader.cpp
src/optimizer/: aggregation_pushdown.cpp
src/scalar_function/: array_contains_all.cpp  bloom_filter.cpp  dd_login.cpp  dd_search.cpp
src/scanner/: read_arrow_dd.cpp
src/table_function/: dd_splits.cpp
test/sql/: array_contains_all.test  bloom_filter.test  dazzle_duck.test  dazzleduck.test  dd_read_arrow.test  dd_read_arrow_aggregation_pushdown.test  dd_read_arrow_aggregation_pushdown.test_slow  dd_read_arrow_aggregation_pushdown_split.test_slow  dd_read_arrow_all_types_demo.test_slow  dd_read_arrow_all_types_split_comprehensive.test_slow  dd_read_arrow_integration.test_slow  dd_read_arrow_split.test_slow  dd_search.test  read_arrow_dd.test  read_arrow_dd_integration.test_slow  read_arrow_dd_split.test_slow
